--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
-
 {
   "name": "Everett's Asteroid Blaster",
   "short_name": "Asteroid Blaster",
   "start_url": "/everetts-asteroid-blaster/",
+  "scope": "/everetts-asteroid-blaster/",
   "display": "standalone",
   "background_color": "#111111",
   "theme_color": "#111111",
